# src/storage/api-docs/api-docs.json
@@ -2,6 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Leaderboard API",
+        "description": "API documentation for the Leaderboard application",
         "version": "1.0.0"
     },
     "paths": {
@@ -19,7 +20,12 @@
                     "400": {
                         "description": "Bad request"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             }
         },
         "/api/users": {
@@ -33,7 +39,12 @@
                     "200": {
                         "description": "List of users"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -68,7 +79,12 @@
                     "201": {
                         "description": "Create a user."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             }
         },
         "/api/users/{user}": {
@@ -91,7 +107,12 @@
                     "200": {
                         "description": "Display a user."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -112,7 +133,12 @@
                     "204": {
                         "description": "Delete a user."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             }
         },
         "/api/users/{user}/points": {
@@ -157,7 +183,12 @@
                     "404": {
                         "description": "User not found."
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
             }
         },
         "/api/current-winner": {
@@ -174,7 +205,22 @@
                     "404": {
                         "description": "No winner declared yet"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "apiToken": []
+                    }
+                ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "apiToken": {
+                "type": "apiKey",
+                "description": "API token to authorize requests",
+                "name": "api-token",
+                "in": "header"
             }
         }
     },
